Applied class "pride-flag"

--- a/html/nizi.html
+++ b/html/nizi.html
@@ -54,15 +54,15 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/her</p>
             <a href="https://lgbtqia.fandom.com/wiki/Transgender" target="_blank">
-              <img class="border" src="../img/pride/Transgender.png" alt="トランスジェンダー（Transgender）" title="トランスジェンダー（Transgender）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Transgender.png" alt="トランスジェンダー（Transgender）" title="トランスジェンダー（Transgender）">
             </a>
             <br>
             <a href="https://lgbtqia.fandom.com/wiki/Asexual_spectrum#Gray-asexual" target="_blank">
-              <img class="border" src="../img/pride/GrayAce.png" alt="グレイアセクシャル（Gray Asexual）" title="グレイアセクシャル（Gray Asexual）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/GrayAce.png" alt="グレイアセクシャル（Gray Asexual）" title="グレイアセクシャル（Gray Asexual）">
             </a>
             <br>
             <a href="https://lgbtqia.fandom.com/wiki/Aromantic" target="_blank">
-              <img class="border" src="../img/pride/Aromantic.png" alt="アロマンティック（Aromantic）" title="アロマンティック（Aromantic）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Aromantic.png" alt="アロマンティック（Aromantic）" title="アロマンティック（Aromantic）">
             </a>
             <br>
           </div>
@@ -112,11 +112,11 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/they</p>
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" target="_blank">
-              <img class="border" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）">
             </a>
             <br>
             <a href="https://lgbtqia.fandom.com/wiki/Asexual_spectrum#Aceflux" target="_blank">
-              <img class="border" src="../img/pride/Aceflux.png" alt="エイスフラックス（Aceflux）" title="エイスフラックス（Aceflux）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Aceflux.png" alt="エイスフラックス（Aceflux）" title="エイスフラックス（Aceflux）">
             </a>
             <br>
           </div>
@@ -166,7 +166,7 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/they</p>
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" target="_blank">
-              <img class="border" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）">
             </a>
             <br>
           </div>
@@ -218,15 +218,15 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/they</p>
             <a href="https://lgbtqia.fandom.com/wiki/Transfeminine" target="_blank">
-              <img class="border" src="../img/pride/Transfeminine.png" alt="トランスフェミニン（Transfeminine）" title="トランスフェミニン（Transfeminine）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Transfeminine.png" alt="トランスフェミニン（Transfeminine）" title="トランスフェミニン（Transfeminine）">
             </a>
             <br>
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" target="_blank">
-              <img class="border" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）">
             </a>
             <br>
             <a href="https://lgbtqia.fandom.com/wiki/Asexual" target="_blank">
-              <img class="border" src="../img/pride/Asexual.png" alt="アセクシャル（Asexual）" title="アセクシャル（Asexual）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Asexual.png" alt="アセクシャル（Asexual）" title="アセクシャル（Asexual）">
             </a>
             <br>
           </div>
@@ -270,7 +270,7 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/her</p>
             <a href="https://lgbtqia.fandom.com/wiki/Omnisexual" target="_blank">
-              <img class="border" src="../img/pride/Omnisexual.png" alt="オムニセクシャル（Omnisexual）" title="オムニセクシャル（Omnisexual）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Omnisexual.png" alt="オムニセクシャル（Omnisexual）" title="オムニセクシャル（Omnisexual）">
             </a>
             <br>
           </div>
@@ -304,7 +304,7 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：they/it</p>
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" target="_blank">
-              <img class="border" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）">
             </a>
             <br>
           </div>
@@ -338,7 +338,7 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：they/them</p>
             <a href="https://lgbtqia.fandom.com/wiki/Non-binary" target="_blank">
-              <img class="border" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）">
             </a>
             <br>
           </div>
@@ -374,23 +374,23 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/any</p>
             <a href="https://lgbtqia.fandom.com/wiki/Intersex" target="_blank">
-              <img class="border" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）">
             </a>
             <br>
             <a href="https://lgbtqia.fandom.com/wiki/Aromantic_asexual" target="_blank">
-              <img class="border" src="../img/pride/Aroace.png" alt="アロ＝エイス（Aroace）" title="アロ＝エイス（Aroace）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Aroace.png" alt="アロ＝エイス（Aroace）" title="アロ＝エイス（Aroace）">
             </a>
             <br>
             <a href="https://lgbtqia.fandom.com/wiki/Asexual_spectrum#Apothisexual" target="_blank">
-              <img class="border" src="../img/pride/SexRepulsed.png" alt="性行為を虫唾が走った（Sex-Repulsed）" title="性行為を虫唾が走った（Sex-Repulsed）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/SexRepulsed.png" alt="性行為を虫唾が走った（Sex-Repulsed）" title="性行為を虫唾が走った（Sex-Repulsed）">
             </a>
             <br>
             <a href="https://lgbtqia.fandom.com/wiki/Genderfluid" target="_blank">
-              <img class="border" src="../img/pride/Genderfluid.png" alt="ジェンダーフリュイド（Genderfluid）" title="ジェンダーフリュイド（Genderfluid）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Genderfluid.png" alt="ジェンダーフリュイド（Genderfluid）" title="ジェンダーフリュイド（Genderfluid）">
             </a>
             <br>
             <a href="https://lgbtqia.fandom.com/wiki/Genderflux" target="_blank">
-              <img class="border" src="../img/pride/Genderflux.png" alt="ジェンダーフラックス（Genderflux）" title="ジェンダーフラックス（Genderflux）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Genderflux.png" alt="ジェンダーフラックス（Genderflux）" title="ジェンダーフラックス（Genderflux）">
             </a>
             <br>
           </div>
@@ -452,11 +452,11 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/they</p>
             <a href="https://lgbtqia.fandom.com/wiki/Intersex" target="_blank">
-              <img class="border" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）">
             </a>
             <br>
             <a href="https://lgbtqia.fandom.com/wiki/Agender" target="_blank">
-              <img class="border" src="../img/pride/Agender.png" alt="アジェンダー（Agender）" title="アジェンダー（Agender）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Agender.png" alt="アジェンダー（Agender）" title="アジェンダー（Agender）">
             </a>
             <br>
           </div>
@@ -493,7 +493,7 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：</p>
             <a href="https://lgbtqia.fandom.com/wiki/" target="_blank">
-              <img class="border" src="../img/pride/" alt="" title="" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
             </a>
             <br>
           </div>
@@ -532,11 +532,11 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/they/hu</p>
             <a href="https://lgbtqia.fandom.com/wiki/Demigender#Demigirl" target="_blank">
-              <img class="border" src="../img/pride/Demigirl.png" alt="デミ女（Demigirl）" title="デミ女（Demigirl）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Demigirl.png" alt="デミ女（Demigirl）" title="デミ女（Demigirl）">
             </a>
             <br>
             <a href="https://lgbtqia.fandom.com/wiki/Abrosexual" target="_blank">
-              <img class="border" src="../img/pride/Abrosexual.png" alt="アブロセクシャル（Abrosexual）" title="アブロセクシャル（Abrosexual）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Abrosexual.png" alt="アブロセクシャル（Abrosexual）" title="アブロセクシャル（Abrosexual）">
             </a>
             <br>
           </div>
@@ -572,7 +572,7 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：</p>
             <a href="https://lgbtqia.fandom.com/wiki/" target="_blank">
-              <img class="border" src="../img/pride/" alt="" title="" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
             </a>
             <br>
           </div>
@@ -607,7 +607,7 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：</p>
             <a href="https://lgbtqia.fandom.com/wiki/" target="_blank">
-              <img class="border" src="../img/pride/" alt="" title="" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
             </a>
             <br>
           </div>
@@ -642,7 +642,7 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：she/he</p>
             <a href="https://lgbtqia.fandom.com/wiki/Bigender" target="_blank">
-              <img class="border" src="../img/pride/Bigender.png" alt="バイジェンダー（Bigender）" title="バイジェンダー（Bigender）" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/Bigender.png" alt="バイジェンダー（Bigender）" title="バイジェンダー（Bigender）">
             </a>
             <br>
           </div>
@@ -677,7 +677,7 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：</p>
             <a href="https://lgbtqia.fandom.com/wiki/" target="_blank">
-              <img class="border" src="../img/pride/" alt="" title="" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
             </a>
             <br>
           </div>
@@ -711,7 +711,7 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：</p>
             <a href="https://lgbtqia.fandom.com/wiki/" target="_blank">
-              <img class="border" src="../img/pride/" alt="" title="" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
             </a>
             <br>
           </div>
@@ -745,7 +745,7 @@
             <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
             <p class="caption">代名詞：</p>
             <a href="https://lgbtqia.fandom.com/wiki/" target="_blank">
-              <img class="border" src="../img/pride/" alt="" title="" style="width: 200px; height: 125px;">
+              <img class="pride-flag" src="../img/pride/" alt="" title="">
             </a>
             <br>
           </div>
