--- a/html/ushie.html
+++ b/html/ushie.html
@@ -299,7 +299,7 @@
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="caption">代名詞：she/it</p>
               <a href="https://lgbtqia.fandom.com/wiki/Non-binary#Non-binary_woman/girl_and_non-binary_man/boy" target="_blank">
-                <img class="border" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール（Nonbinary girl）" title="ノンバイナリー・ガール（Nonbinary girl）" style="width: 200px; height: 125px;">
+                <img class="pride-flag" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール（Nonbinary girl）" title="ノンバイナリー・ガール（Nonbinary girl）">
               </a>
               <br>
             </div>
@@ -391,11 +391,11 @@
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="caption">代名詞：di/dem/dier</p>
               <a href="https://lgbtqia.fandom.com/wiki/Intersex" target="_blank">
-                <img class="border" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）" style="width: 200px; height: 125px;">
+                <img class="pride-flag" src="../img/pride/Intersex.png" alt="インターセックス（Intersex）" title="インターセックス（Intersex）">
               </a>
               <br>
               <a href="https://lgbtqia.fandom.com/wiki/Non-binary#Non-binary_woman/girl_and_non-binary_man/boy" target="_blank">
-                <img class="border" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール（Nonbinary girl）" title="ノンバイナリー・ガール（Nonbinary girl）" style="width: 200px; height: 125px;">
+                <img class="pride-flag" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール（Nonbinary girl）" title="ノンバイナリー・ガール（Nonbinary girl）">
               </a>
               <br>
             </div>
@@ -542,7 +542,7 @@
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="caption">代名詞：ey/em/eir</p>
               <a href="https://lgbtqia.fandom.com/wiki/Neutrois" target="_blank">
-                <img class="border" src="../img/pride/Neutrois.png" alt="ネウトゥワ（Neutrois）" title="ネウトゥワ（Neutrois）" style="width: 200px; height: 125px;">
+                <img class="pride-flag" src="../img/pride/Neutrois.png" alt="ネウトゥワ（Neutrois）" title="ネウトゥワ（Neutrois）">
               </a>
               <br>
             </div>
@@ -1077,7 +1077,7 @@
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="caption">代名詞：she/ve</p>
               <a href="https://lgbtqia.fandom.com/wiki/Lesbian" target="_blank">
-                <img class="border" src="../img/pride/Lesbian.png" alt="レズビアン（Lesbian）" title="レズビアン（Lesbian）" style="width: 200px; height: 125px;">
+                <img class="pride-flag" src="../img/pride/Lesbian.png" alt="レズビアン（Lesbian）" title="レズビアン（Lesbian）">
               </a>
               <br>
             </div>
@@ -2300,11 +2300,11 @@
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="caption">代名詞：she/they/ze</p>
               <a href="https://lgbtqia.fandom.com/wiki/Non-binary#Non-binary_woman/girl_and_non-binary_man/boy" target="_blank">
-                <img class="border" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール（Nonbinary girl）" title="ノンバイナリー・ガール（Nonbinary girl）" style="width: 200px; height: 125px;">
+                <img class="pride-flag" src="../img/pride/NonbinaryGirl.png" alt="ノンバイナリー・ガール（Nonbinary girl）" title="ノンバイナリー・ガール（Nonbinary girl）">
               </a>
               <br>
               <a href="https://lgbtqia.fandom.com/wiki/Non-binary#Pansexual" target="_blank">
-                <img class="border" src="../img/pride/Pansexual.png" alt="パンセクシャル（Pansexual）" title="パンセクシャル（Pansexual）" style="width: 200px; height: 125px;">
+                <img class="pride-flag" src="../img/pride/Pansexual.png" alt="パンセクシャル（Pansexual）" title="パンセクシャル（Pansexual）">
               </a>
               <br>
             </div>
@@ -2391,11 +2391,11 @@
               <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
               <p class="caption">代名詞：fae/faer</p>
               <a href="https://lgbtqia.fandom.com/wiki/Transfeminine" target="_blank">
-                <img class="border" src="../img/pride/Transfeminine.png" alt="トランスフェミニン（Transfem）" title="トランスフェミニン（Transfem）" style="width: 200px; height: 125px;">
+                <img class="pride-flag" src="../img/pride/Transfeminine.png" alt="トランスフェミニン（Transfem）" title="トランスフェミニン（Transfem）">
               </a>
               <br>
               <a href="https://lgbtqia.fandom.com/wiki/Non-binary" target="_blank">
-                <img class="border" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）" style="width: 200px; height: 125px;">
+                <img class="pride-flag" src="../img/pride/Nonbinary.png" alt="ノンバイナリー（Nonbinary）" title="ノンバイナリー（Nonbinary）">
               </a>
               <br>
             </div>
