Fixed the <header> to be more sensible

--- a/html/extra_kyara.html
+++ b/html/extra_kyara.html
@@ -29,7 +29,8 @@
     <header>
       <div class="heading">
         <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
-        <h2 class="header-text">造化神録</h2>
+        <h2 class="header-text">造化神録　エキストラ編</h2>
+        <h3 class="header-text">詰らない人々</h3>
       </div>
     </header>
     <article>
