--- a/html/ibarasaki.html
+++ b/html/ibarasaki.html
@@ -2735,7 +2735,7 @@
                 ユムチャーギン・エルテネチメグ<br>
                 Yumjaagyn Erdenechimeg
               </p>
-              <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Юмжаагын Эрдэнэчимэг</span>」を書く。モンゴル文字に「<span lang="mn-Mong" class="font-mongolian" style="display:inline-block; font-weight:normal; font-size: 175%; line-height: 1.25em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠶᠤᠮᠵᠠᠭᠢᠨ<br>ᠡᠷᠳᠡᠨᠡᠴᠢᠮᠡᠭ</span>」を書く。
+              <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Юмжаагын Эрдэнэчимэг</span>」を書く。モンゴル文字に「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠶᠤᠮᠵᠠᠭᠢᠨ<br>ᠡᠷᠳᠡᠨᠡᠴᠢᠮᠡᠭ</span>」を書く。
             </div>
             <br>
             <br>
@@ -2750,7 +2750,7 @@
                 ユムチャーギン・メンヒツェツェグ<br>
                 Yumjaagyn Mönkhtsetseg
               </p>
-              <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Юмжаагын Мөнхцэцэг</span>」を書く。モンゴル文字に「<span lang="mn-Mong" class="font-mongolian" style="display:inline-block; font-weight:normal; font-size: 175%; line-height: 1.25em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠶᠤᠮᠵᠠᠭᠢᠨ<br>ᠮᠥᠩᠬᠡᠴᠡᠴᠡᠭ</span>」を書く。
+              <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Юмжаагын Мөнхцэцэг</span>」を書く。モンゴル文字に「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠶᠤᠮᠵᠠᠭᠢᠨ<br>ᠮᠥᠩᠬᠡᠴᠡᠴᠡᠭ</span>」を書く。
             </div>
             <br>
             <br>
