--- a/html/nizi.html
+++ b/html/nizi.html
@@ -355,7 +355,7 @@
               性自認：ノンバイナリー<br>
               代名詞：奴（they/them）
             </p>
-            <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Болормаа</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian" style="display: inline-block; font-weight: normal; line-height: 1.125em; -webkit-writing-mode: vertical-lr; -o-writing-mode: vertical-lr; -ms-writing-mode: tb-lr; writing-mode: tb-lr; writing-mode: vertical-lr;; text-orientation: sideways; vertical-align: top;">ᠪᠣᠯᠣᠷᠮᠠ</span>」を書く。</p>
+            <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Болормаа</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠪᠣᠯᠣᠷᠮᠠ</span>」を書く。</p>
             <br>
             <a href="./gallery/nizi/Bolormaa.html" target="topframe">美術館へ行きますか？</a>
             <br>
