--- a/html/obsidianrat.html
+++ b/html/obsidianrat.html
@@ -30,6 +30,7 @@
       <div class="heading">
         <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
         <h2 class="header-text">造化神録</h2>
+        <h3 class="header-text">黒曜石評議会と加入者</h3>
       </div>
     </header>
     <article>
