--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -31,6 +31,7 @@
       <div class="heading">
         <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure</h1>
         <h2 class="header-text">造化神録</h2>
+        <h3 class="header-text">スポルメーア民主共和国</h3>
       </div>
     </header>
     <article>
