Placed in the info templates for species, ability, sex, gender, preferred pronouns, sexuality, birthday, age, and family

--- a/html/boss.html
+++ b/html/boss.html
@@ -57,6 +57,17 @@
                 種族：ガルーダ<br>
                 能力：強烈な暴風を呼び起こす程度の能力
               </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>スピリットアタック全２種</p>
               <p>
                 ――スピリットカード――<br>
@@ -115,6 +126,17 @@
                 種族：ミノタウロス<br>
                 能力：人間を自分の死に導く程度の能力
               </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>スピリットアタック全２種</p>
               <p>
                 ――スピリットカード――<br>
