--- a/html/bunoden.html
+++ b/html/bunoden.html
@@ -54,6 +54,17 @@
                 種族：さとり<br>
                 能力：他人の智識を見る程度の能力
               </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　クリメンティーナの夫であり、リーリヤとキェルスタの父親である。</p>
             </div>
             <br>
@@ -74,6 +85,17 @@
                 種族：さとり<br>
                 能力：他人の後悔を見る程度の能力
               </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　クリメンティーナとアリギルトスの娘であり、リーリヤの妹である。</p>
             </div>
             <br>
@@ -94,6 +116,17 @@
                 種族：さとり<br>
                 能力：他人の性欲を見る程度の能力
               </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　アリギルトスの妻であり、リーリヤとキェルスタの母親である。</p>
             </div>
             <br>
@@ -114,6 +147,17 @@
                 種族：さとり<br>
                 能力：他人の感情を見る程度の能力
               </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>　クリメンティーナとアリギルトスの娘であり、キェルスタの姉である。</p>
             </div>
             <br>
