--- a/html/flame_dragon.html
+++ b/html/flame_dragon.html
@@ -101,6 +101,17 @@
                   種族：大天狗<br>
                   能力：火山を噴火すると火山を鎮静する程度の能力
                 </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
                 <p>閻魔の山に住む大天狗である。天狗達の実質上の支配者である。</p>
                 <p>もともと姓を持たない。名前は平仮名に『ささむ』で書いた。しかし、閻魔様はささむに機会を与えた。大天狗として政府の全ての責任を果たし、彼女は属する。彼女が申し出を受け入れた瞬間、閻魔様はささむを『閻魔塚沙々夢』と改名した。</p>
                 <p>しかし、天狗は、閻魔塚氏の姫と信じ始め、沙々夢を『沙々夢娘々』と呼び始めた。</p>
@@ -118,7 +129,21 @@
                   いけはた　ハミ<br>
                   Ikehata Hami
                 </p>
-                <p>種族：天狗</p>
+                <p>
+                  種族：天狗<br>
+                  能力：
+                </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
               </div>
               <br>
               <br>
@@ -133,7 +158,21 @@
                   ルンドゥプ・カリングポング・ルンドルプ・キドトドパ<br>
                   Lhundup Kalingpong Lhundrup Kyidtodpa
                 </p>
-                <p>種族：天狗</p>
+                <p>
+                  種族：天狗<br>
+                  能力：
+                </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
                 <p>※チベット文字に「<span lang="bo" class="font-tibetan">ལྷུན་གུབ་ཀ་ལིང་པོང་ལྷུན་གྲུབ་ཀྱིད་ཏོད་པ་</span>」を書く。ワイリー方式に「lhun gub ka ling pong lhun grub kyid tod pa」を書く。</p>
               </div>
               <br>
@@ -149,7 +188,21 @@
                   三ツ木　姫娘（みつぎ　ひめこ）<br>
                   Mitsugi Himeko
                 </p>
-                <p>種族：天狗</p>
+                <p>
+                  種族：天狗<br>
+                  能力：
+                </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
               </div>
               <br>
               <br>
@@ -164,7 +217,21 @@
                   築野居　あや（つのゐ　あや）<br>
                   Tsunowi Aya
                 </p>
-                <p>種族：天狗</p>
+                <p>
+                  種族：天狗<br>
+                  能力：
+                </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
               </div>
               <br>
               <br>
@@ -184,7 +251,21 @@
                   氷見　英子（ひみ　ひでこ）<br>
                   Himi Hideko
                 </p>
-                <p>種族：天狗</p>
+                <p>
+                  種族：天狗<br>
+                  能力：
+                </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
               </div>
               <br>
               <br>
@@ -199,7 +280,21 @@
                   烏ヶ原　ころーねー（からすがはら　ころーねー）<br>
                   Karasugahara Korone
                 </p>
-                <p>種族：天狗</p>
+                <p>
+                  種族：天狗<br>
+                  能力：
+                </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
                 <p>※ギリシャ文字に「<span lang="el" class="font-greek">Κορώνη Καρασουγαχάρα</span>」を書く。ローマ字に「<span lang="el-Latn" class="font-latin">Korṓnē Karasougakhára</span>」を書く。</p>
               </div>
               <br>
@@ -220,6 +315,17 @@
                   種族：女郎蜘蛛の妖怪<br>
                   能力：毒で満たされた細蟹の作成する程度の能力
                 </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
                 <p>閻魔山に住むヤクザ系列の花魁である。静村家の出身である。</p>
                 <p>彼女のヤクザの絆の為に、禁如は神々を含むいくつかの有名なクライアントを持っている。そのようなクライアントには、とりわけとか錐ヶ宮ルーメン乃（賭博の女神）とか沙々夢姫（天狗達の事実上の支配者）が含まれる。禁如は周りにいるのが不愉快になる傾向がある。</p>
                 <p>しかし、禁如は人間のクライアントを持った事がない。禁如の噛みつきは常に致死的である為、人間はその経験から死ぬ傾向がある。また、細蟹を使ってクライアントを縛るのが好きである。これには、人々を家から遠ざけるという追加の利点がある。（禁如の家は、ありふれた家事をするクモやウェブでいっぱい。）</p>
@@ -237,7 +343,21 @@
                   森涅　壽美子（もりね　きみこ）<br>
                   Morine Kimiko
                 </p>
-                <p>種族：天狗</p>
+                <p>
+                  種族：天狗<br>
+                  能力：
+                </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
               </div>
               <br>
               <br>
@@ -252,7 +372,21 @@
                   兎仏嘉田　宝鈴（うぶかた　ほうすず）<br>
                   Ubukata Housuzu
                 </p>
-                <p>種族：天狗</p>
+                <p>
+                  種族：天狗<br>
+                  能力：
+                </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
               </div>
               <br>
               <br>
@@ -272,7 +406,21 @@
                   久求十　阿奈香（ひさきゅうと　あなか）<br>
                   Hisakyuuto Anaka
                 </p>
-                <p>種族：天狗</p>
+                <p>
+                  種族：天狗<br>
+                  能力：
+                </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
               </div>
               <br>
               <br>
@@ -292,6 +440,17 @@
                   種族：賭博の女神<br>
                   能力：彼女に有利なオッズを操作する程度の能力
                 </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
                 <p>天狗の街の凹途澤市でパチンコ店を所有する賭博の女神である。</p>
                 <p>天狗はあらゆる種類の賭博を禁止する法律を定めているが、ルーメン乃はその法律の抜け穴を使ってパチンコ屋を始めた。</p>
                 <p>――天狗の賭博法律について</p>
@@ -311,7 +470,21 @@
                   又橋　早千恵（またはし　さちえ）<br>
                   Matahashi Sachie
                 </p>
-                <p>種族：天狗</p>
+                <p>
+                  種族：天狗<br>
+                  能力：
+                </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
               </div>
               <br>
               <br>
@@ -326,7 +499,21 @@
                   ソウマ　魎呼（ソウマ　りょうこ）<br>
                   Soma Ryoko
                 </p>
-                <p>種族：天狗</p>
+                <p>
+                  種族：天狗<br>
+                  能力：
+                </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
               </div>
               <br>
               <br>
@@ -341,7 +528,21 @@
                   厄史丸　純子（やくしまる　じゅんこ）<br>
                   Yakushimaru Junko
                 </p>
-                <p>種族：天狗</p>
+                <p>
+                  種族：天狗<br>
+                  能力：
+                </p>
+                <p>
+                  性別：<br>
+                  性自認：<br>
+                  代名詞：<br>
+                  雌雄性：
+                </p>
+                <p>
+                  誕生日：<br>
+                  年齢：
+                </p>
+                <p>家族：</p>
               </div>
               <br>
               <br>
@@ -463,7 +664,21 @@
                 理姫丸　一姫（りきまる　かずひめ）<br>
                 Rikimaru Kazuhime
               </p>
-              <p>種族：鬼と虎の妖怪のハーフ</p>
+              <p>
+                種族：鬼と虎の妖怪のハーフ<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p><ruby>多聞北姫<rt>たもんのほくひめ</rt></ruby>が生まれる。毘沙門天様の子孫である。</p>
             </div>
             <br>
@@ -479,6 +694,21 @@
                 毘沙門天（ヴァイシュラヴァナ）<br>
                 Lord Bishamonten
               </p>
+              <p>
+                種族：神<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
             </div>
             <br>
             <br>
@@ -493,7 +723,21 @@
                 大野　二姫（おおの　じひめ）<br>
                 Ono Jihime
               </p>
-              <p>種族：鬼</p>
+              <p>
+                種族：鬼<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p><ruby>増長南姫<rt>ぞうちょうのなんひめ</rt></ruby>が生まれる。増長天様の子孫である。</p>
             </div>
             <br>
@@ -509,6 +753,21 @@
                 増長天（ヴィルーダカ）<br>
                 Lord Zouchouten
               </p>
+              <p>
+                種族：神<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
             </div>
             <br>
             <br>
@@ -523,7 +782,21 @@
                 雪村　三姫（ゆきむら　みき）<br>
                 Yukimura Miki
               </p>
-              <p>種族：鬼</p>
+              <p>
+                種族：鬼<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p><ruby>治国東姫<rt>じこくのとうひめ</rt></ruby>が生まれる。持国天様の子孫である。</p>
             </div>
             <br>
@@ -539,6 +812,21 @@
                 持国天（ドゥリタラーシュトラ）<br>
                 Lord Jikokuten
               </p>
+              <p>
+                種族：神<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
             </div>
             <br>
             <br>
@@ -553,7 +841,21 @@
                 古澤　四姫（ふるさわ　しき）<br>
                 Furusawa Shiki
               </p>
-              <p>種族：鬼</p>
+              <p>
+                種族：鬼<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p><ruby>広目西姫<rt>こうもくのせいひめ</rt></ruby>が生まれる。広目天様の子孫である。</p>
             </div>
             <br>
@@ -569,6 +871,21 @@
                 広目天（ヴィルーパーシャ）<br>
                 Lord Koumokuten
               </p>
+              <p>
+                種族：神<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
             </div>
             <br>
             <br>
