--- a/html/hikigahara.html
+++ b/html/hikigahara.html
@@ -49,7 +49,21 @@
               朴　茶々丸（ぱく　ちゃちゃまる）<br>
               Paku Chachamaru
             </p>
-            <p>種族：ドラゴンの女神</p>
+            <p>
+              種族：ドラゴンの女神<br>
+              能力：
+            </p>
+            <p>
+              性別：<br>
+              性自認：<br>
+              代名詞：<br>
+              雌雄性：
+            </p>
+            <p>
+              誕生日：<br>
+              年齢：
+            </p>
+            <p>家族：</p>
             <p>※代名詞は「<ruby>我<rt>われ</rt></ruby>」である。</p>
           </div>
         </div>
