--- a/html/nizi.html
+++ b/html/nizi.html
@@ -78,6 +78,7 @@
               能力：結晶を創造する程度の能力
             </p>
             <p>
+              性別：♀<br>
               性自認：女・トランスジェンダー　（どうやらノンバイナリー・ガール）<br>
               代名詞：彼女（she/her）<br>
               雌雄性：グレイアセクシャルとアロマンティック
@@ -133,6 +134,7 @@
               能力：人を獣人に変わる程度の能力
             </p>
             <p>
+              性別：○○<br>
               性自認：ノンバイナリー<br>
               代名詞：彼女／奴（she/they）<br>
               雌雄性：エイスフラックス
@@ -178,8 +180,10 @@
               Kiyoi
             </p>
             <p>
+              性別：♀<br>
               性自認：ノンバイナリー<br>
-              代名詞：彼女／奴（she/they）
+              代名詞：彼女／奴（she/they）<br>
+              雌雄性：知るには若すぎるよー！！
             </p>
             <p>
               種族：天狗<br>
@@ -241,9 +245,14 @@
               能力：不明
             </p>
             <p>
+              性別：<br>
               性自認：ノンバイナリーとトランスフェミニン<br>
               代名詞：彼女／奴（she/they）<br>
               雌雄性：アセクシャル
+            </p>
+            <p>
+              誕生日：<br>
+              年齢：
             </p>
             <p>自分の服を作るフェネックである。あたいの自己ケモノであるね。</p>
             <br>
@@ -280,12 +289,21 @@
               製品の名前：A10000-ANIMUS（エイいちまん－アニムス）<br>
               人間のような名前：アニムス　Animus
             </p>
-            <p>種族：アンドロイド・偵察モデル</p>
             <p>
+              種族：アンドロイド・偵察モデル<br>
+              能力：
+            </p>
+            <p>
+              性別：♀<br>
               性自認：女<br>
               代名詞：彼女（she/her）<br>
               雌雄性：オムニセクシャル
             </p>
+            <p>
+              誕生日：<br>
+              年齢：
+            </p>
+            <p>家族：イドラ（双子・姉）</p>
             <br>
             <a href="./gallery/nizi/Animus.html" target="topframe">美術館へ行きますか？</a>
             <br>
@@ -316,8 +334,14 @@
             </p>
             <p>種族：天使</p>
             <p>
+              性別：セックスレス<br>
               性自認：ノンバイナリー<br>
-              代名詞：奴／<ruby>奴<rt>イト</rt></ruby>（they/it）
+              代名詞：奴／<ruby>奴<rt>イト</rt></ruby>（they/it）<br>
+              雌雄性：
+            </p>
+            <p>
+              誕生日：不明<br>
+              年齢：不明
             </p>
             <p>アラビア文字に「<span lang="ar" dir="rtl" class="font-naskh">عَيْن</span>」を書く。ISO 233-2式に「<span lang="ar-Latn" class="font-latin">ʿAyn</span>」を書く。</p>
             <br>
@@ -353,8 +377,10 @@
               能力：不明
             </p>
             <p>
+              性別：♀<br>
               性自認：ノンバイナリー<br>
-              代名詞：奴（they/them）
+              代名詞：奴（they/them）<br>
+              雌雄性：ストレート
             </p>
             <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Болормаа</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠪᠣᠯᠣᠷᠮᠠ</span>」を書く。</p>
             <br>
@@ -467,11 +493,14 @@
               ハップ・P・エモ＝ション<br>
               Hap P. Emo-shun
             </p>
-            <p>種族：神</p>
+            <p>
+              種族：神<br>
+              能力：
+            </p>
             <p>
               性別：インターセックス<br>
               性自認：アジェンダー<br>
-              代名詞：彼女／奴<br>
+              代名詞：彼女／奴（she/they）<br>
               雌雄性：性行為を虫唾が走ったアセクシャル
             </p>
             <p>感情の神である。感情を感じる場合による、耳の髪と翼の色は変わる。通常の色は<span style="color: #FBD569;">金色</span>である。</p>
