--- a/html/ancient.html
+++ b/html/ancient.html
@@ -57,6 +57,17 @@
                 種族：法の妖怪（かつて菩薩）<br>
                 能力：どんな生き物でも法に従う事を強制する程度の能力、人工的なスピリットカードを創造する程度の能力
               </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>シュリーナガラから智者のような妖怪である。何万年で生きれた。</p>
             </div>
           </div>
@@ -71,7 +82,21 @@
                 遠呂智　蛇　揺雨（おろちのへびのゆるさめ）<br>
                 Orochi no Hebi no Yurusame
               </p>
-              <p>種族：ヘビの妖怪</p>
+              <p>
+                種族：ヘビの妖怪<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>八岐遠呂智より享ける蛇の妖怪である。</p>
               <p>※代名詞は「ヤツガレ」である。</p>
             </div>
@@ -87,7 +112,21 @@
                 平　也醒　上丸（たいらのやさめのかみまる）<br>
                 Taira no Yasame no Kamimaru
               </p>
-              <p>種族：日本刀の妖怪</p>
+              <p>
+                種族：日本刀の妖怪<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>欲平氏に生まれた妖怪である。</p>
               <p>この刀の妖怪は、平氏が優れていると信じて、低い人間への愛を持っていない。</p>
               <p>神關里の元帝王の<ruby>遊坂茜志奴呂<rt>ゆうざかのあかねのしぬろ</rt></ruby>の下で奉仕したこの妖怪は、今や帰属意識を持っている。</p>
@@ -105,7 +144,21 @@
                 夜叉町　鐵　奈我沙（やしゃまちのくろがねのながさ）<br>
                 Yashamachi no Kurogane no Nagasa
               </p>
-              <p>種族：夜叉</p>
+              <p>
+                種族：夜叉<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
             </div>
           </div>
         </div>
@@ -123,6 +176,21 @@
                 一条　久二　乃良宗（いちじょうのくにののらむね）<br>
                 Ichijo no Kuni no Noramune
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の一番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -137,6 +205,21 @@
                 二条　清　八太郎（にじょうのきよのやたろう）<br>
                 Nijo no Kiyo no Yataro
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の二番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -151,6 +234,21 @@
                 三條　麹　丸雨（さんじょうのこうじのまるさめ）<br>
                 Sanjo no Kouji no Marusame
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の三番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -165,6 +263,21 @@
                 源　蜘　彩歌子（みなもとのくものあやかし）<br>
                 Minamoto no Kumo no Ayakashi
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の四番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -179,6 +292,21 @@
                 平　榊間　美智（たいらのさかまのよしとも）<br>
                 Taira no Sakama no Yoshitomo
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の五番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -193,6 +321,21 @@
                 藤原　裁　峰義（ふじわらのさいのみねよし）<br>
                 Fujiwara no Sai no Mineyoshi
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の六番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -207,6 +350,21 @@
                 橘　藪根　岸仁（たちばなのやぶねのきしひと）<br>
                 Tachibana no Yabune no Kishihito
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の七番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -221,6 +379,21 @@
                 物部　鑓　殺奈（もののべのやりのせつな）<br>
                 Mononobe no Yari no Setsuna
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の八番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -235,6 +408,21 @@
                 九条　纖　本盛（くじょうのしなのもともり）<br>
                 Kujo no Shina no Motomori
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の九番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -249,6 +437,21 @@
                 蘇我　牀　遣仁（そがのゆかのやるひと）<br>
                 Soga no Yuka no Yaruhito
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の十番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -263,6 +466,21 @@
                 足利　畔蒜　毬二（あしかがのくろねのまりじ）<br>
                 Ashikaga no Kurone no Mariji
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の十一番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -277,6 +495,21 @@
                 鷹司　闇　光之郞（たかつかさのやみのみつのろう）<br>
                 Takatsukasa no Yami no Mitsunoro
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の十二番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -291,6 +524,21 @@
                 德川　衣世　探重（とくがわのいよのさがししげ）<br>
                 Tokugawa no Iyo no Sagashishige
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の十三番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -305,6 +553,21 @@
                 大炊御門　鈴　鵜麻（おおいのみかどのすずのうま）<br>
                 Oinomikado no Suzu no Uma
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の十四番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -319,6 +582,21 @@
                 西園寺　綯　清宗（さいおんじのなうのきよむね）<br>
                 Saionji no Nau no Kiyomune
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の十五番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -333,6 +611,21 @@
                 醍醐　猿　概（だいごのさるのおおむね）<br>
                 Daigo no Saru no Omune
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の十六番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -347,6 +640,21 @@
                 今出川　裙兔　雪丸（いまでがわのぐんとのせつまる）<br>
                 Imadegawa no Gunto no Setsumaru
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の十七番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -361,6 +669,21 @@
                 德大寺　誇　宗沙（とくだいじのほこるのむねさ）<br>
                 Tokudaiji no Hokoru no Munesa
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の十八番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -375,6 +698,21 @@
                 近衛　鞠　染鮫（このえのまりのそめざめ）<br>
                 Konoe no Mari no Somezame
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の十九番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -389,6 +727,21 @@
                 菊亭　馬海　春盛（きくていのうまかいのはるもり）<br>
                 Kikutei no Umakai no Harumori
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の二十番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -403,6 +756,21 @@
                 花山院　墨染　花清（かさんのいんのすみぞめのはなのきよ）<br>
                 Kasannoin no Sumizome no Hananokiyo
               </p>
+              <p>
+                種族：<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の二十一番目の帝王である。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
             </div>
@@ -418,7 +786,21 @@
                 遊坂　茜　志奴呂（ゆうざかのあかねのしぬろ）<br>
                 Yuuzaka no Akane no Shinuro
               </p>
-              <p>種族：キツネの妖怪</p>
+              <p>
+                種族：キツネの妖怪<br>
+                能力：
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
               <p>神關里の二十二番目の元帝王である。</p>
               <p>帝王システムが廃止される前の最後の帝王であった、志奴呂は恐れられた独裁者であった。エーレンライヒ氏の元首と刀の上丸と共に、神関里の全てに苦しみを齎した。勿論、草大陸の彼の故郷を除いて。</p>
               <p>※代名詞は「<ruby>朕<rt>ちん</rt></ruby>」である。</p>
